feat: metrics printer