@@ -1,34 +1,38 @@
-package poc.metrics;
+package kafka.metrics;
 
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.apache.kafka.streams.KafkaStreams;
+import java.util.Set;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import org.apache.kafka.common.Metric;
 
 public class MetricsPrinter {
 
-  final KafkaStreams ks;
+  final Supplier<Map<org.apache.kafka.common.MetricName, ? extends Metric>> metricsSupplier;
   final List<MetricName> metricNames;
   final Map<String, List<String>> metricNamesByGroup;
   final long frequency;
 
   public MetricsPrinter(
-      KafkaStreams ks,
+      Supplier<Map<org.apache.kafka.common.MetricName, ? extends Metric>> ks,
       List<MetricName> metricNames,
-      long frequency) {
-    this.ks = ks;
+      long frequency
+  ) {
+    this.metricsSupplier = ks;
     this.metricNames = metricNames;
     this.frequency = frequency;
-    var byGroup = new HashMap<String, List<String>>();
-    for (var m : metricNames) {
+    final Map<String, List<String>> byGroup = new HashMap<>();
+    for (MetricName m : metricNames) {
       byGroup.computeIfPresent(m.group, (s, names) -> {
         names.add(m.name);
         return names;
       });
       byGroup.computeIfAbsent(m.group, s -> {
-        var groups = new ArrayList<String>();
+        final List<String> groups = new ArrayList<>();
         groups.add(m.name);
         return groups;
       });
@@ -37,7 +41,7 @@ public class MetricsPrinter {
   }
 
   public void start() throws InterruptedException {
-    final var metricNames = ks.metrics().keySet();
+    final Set<org.apache.kafka.common.MetricName> metricNames = metricsSupplier.get().keySet();
     System.out.println("All metrics:");
     metricNames.forEach(System.out::println);
     run();
@@ -46,35 +50,50 @@ public class MetricsPrinter {
   List<org.apache.kafka.common.MetricName> selected = new ArrayList<>();
 
   public void run() throws InterruptedException {
-    final var metrics = ks.metrics();
-    final var metricNames = metrics.keySet();
-    final var selected = metricNames.stream()
+    runOnce();
+
+    Thread.sleep(frequency);
+    run();
+  }
+
+  private void runOnce() {
+    final Map<org.apache.kafka.common.MetricName, ? extends Metric> metrics = metricsSupplier.get();
+    final Set<org.apache.kafka.common.MetricName> metricNames = metrics.keySet();
+    final List<org.apache.kafka.common.MetricName> selected = metricNames.stream()
         .filter(metricName -> metricNamesByGroup.containsKey(metricName.group()))
         .filter(metricName -> metricNamesByGroup.get(metricName.group())
             .contains(metricName.name()))
-        .toList();
+        .collect(Collectors.toList());
     if (selected.size() != this.selected.size()) {
       this.selected = selected;
       System.out.println("Selected metrics:");
       selected.forEach(System.out::println);
     }
     try {
-      for (var metricName : selected) {
-         var m = metrics.get(metricName);
+      for (org.apache.kafka.common.MetricName metricName : selected) {
+         Metric m = metrics.get(metricName);
         System.out.println(Instant.now() + " @ " + m.metricName().group() + ":" + m.metricName().name() + " => " + m.metricValue());
       }
     } catch (Exception e) {
       e.printStackTrace();
     }
-
-    Thread.sleep(frequency);
-    run();
   }
 
-  public record MetricName(
-      String name,
-      String group
-  ) {
+  public static class MetricName {
+    final String group;
+    final String name;
 
+    public MetricName(String group, String name) {
+      this.group = group;
+      this.name = name;
+    }
+
+    public String group() {
+      return group;
+    }
+
+    public String name() {
+      return name;
+    }
   }
 }
